[tool.poetry]
name = "LabMastro"
version = "0.1.0"
description = "A python app to controll test suites for Hanmatek devices utilizing Modbus"
authors = ["Josua Blejeru <josua@blejeru.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
minimalmodbus = "^2.1.1"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
